[gd_scene load_steps=4 format=3 uid="uid://845hdd5qj4o"]

[ext_resource type="Script" path="res://CreationScreens/Scripts/ExerciseCreation.gd" id="1_pes8k"]
[ext_resource type="Texture2D" uid="uid://gr5s3wkxk8jn" path="res://Images/icon.svg" id="2_2nxiv"]
[ext_resource type="Script" path="res://CreationScreens/Scripts/SliderSpinBox.gd" id="2_hkq7m"]

[node name="ExerciseCreationScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -4.0
offset_top = -2.0
offset_right = 59.0
offset_bottom = 40.0
script = ExtResource("1_pes8k")

[node name="TitleText" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 158.0
offset_top = 41.0
offset_right = 662.0
offset_bottom = 121.0
theme_override_font_sizes/normal_font_size = 50
text = "Create New Exercise"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 120.0
offset_right = 191.0
offset_bottom = 161.0
theme_override_font_sizes/normal_font_size = 28
text = "Name: "

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 181.0
offset_right = 191.0
offset_bottom = 222.0
theme_override_font_sizes/normal_font_size = 28
text = "Description:"

[node name="NameInput" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 143.0
offset_top = 111.0
offset_right = 801.0
offset_bottom = 172.0
theme_override_font_sizes/font_size = 30

[node name="Description" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 229.0
offset_right = 823.0
offset_bottom = 379.0
theme_override_font_sizes/font_size = 30
wrap_mode = 1

[node name="VC" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 400.0
offset_right = 397.0
offset_bottom = 807.0

[node name="RichTextLabel2" type="RichTextLabel" parent="VC"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 28
text = "Equipment Involved"

[node name="EquipmentSelect" type="OptionButton" parent="VC"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 25
item_count = 8
popup/item_0/text = "None"
popup/item_1/text = "Reformer"
popup/item_1/id = 1
popup/item_2/text = "Cadillac"
popup/item_2/id = 2
popup/item_3/text = "Wunda Chair"
popup/item_3/id = 3
popup/item_4/text = "Barrels"
popup/item_4/id = 4
popup/item_5/text = "Ped A Pul"
popup/item_5/id = 5
popup/item_6/text = "Arm Chair"
popup/item_6/id = 6
popup/item_7/text = "Magic Circle"
popup/item_7/id = 7

[node name="RichTextLabel3" type="RichTextLabel" parent="VC"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 28
text = "Difficulty"

[node name="DifficultySelect" type="OptionButton" parent="VC"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 25
item_count = 3
popup/item_0/text = "Foundational"
popup/item_1/text = "Intermediate"
popup/item_1/id = 1
popup/item_2/text = "Advanced"
popup/item_2/id = 2

[node name="RichTextLabel4" type="RichTextLabel" parent="VC"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 28
text = "Age Range"

[node name="AgeMin" type="HSplitContainer" parent="VC"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("2_hkq7m")

[node name="Slider" type="HSlider" parent="VC/AgeMin"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 18.0
max_value = 65.0
value = 18.0

[node name="SpinBox" type="SpinBox" parent="VC/AgeMin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 18.0
max_value = 65.0
value = 18.0

[node name="AgeMax" type="HSplitContainer" parent="VC"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("2_hkq7m")

[node name="Slider" type="HSlider" parent="VC/AgeMax"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 18.0
max_value = 65.0
value = 65.0

[node name="SpinBox" type="SpinBox" parent="VC/AgeMax"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 18.0
max_value = 65.0
value = 65.0

[node name="RichTextLabel5" type="RichTextLabel" parent="VC"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 28
text = "Time (In Seconds)"

[node name="TimeSecs" type="HSplitContainer" parent="VC"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("2_hkq7m")

[node name="Slider" type="HSlider" parent="VC/TimeSecs"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 300.0
value = 60.0

[node name="SpinBox" type="SpinBox" parent="VC/TimeSecs"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 300.0
value = 60.0

[node name="RichTextLabel5" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 469.0
offset_top = 387.0
offset_right = 789.0
offset_bottom = 428.0
theme_override_font_sizes/normal_font_size = 28
text = "Select Preview Picture:"

[node name="RichTextLabel6" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 23.0
offset_top = 827.0
offset_right = 592.0
offset_bottom = 868.0
theme_override_font_sizes/normal_font_size = 28
text = "Muscle Focuses:"

[node name="ImageAdder" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 458.0
offset_top = 434.0
offset_right = 811.0
offset_bottom = 782.0
texture_normal = ExtResource("2_2nxiv")
ignore_texture_size = true
stretch_mode = 6

[node name="FileDialog" type="FileDialog" parent="ImageAdder"]
auto_translate_mode = 1
title = "Open a File"
initial_position = 1
size = Vector2i(400, 400)
ok_button_text = "Open"
file_mode = 0
access = 1
root_subfolder = "user://Images"

[node name="ProceedButton" type="Button" parent="."]
layout_mode = 0
offset_left = 320.0
offset_top = 1467.0
offset_right = 803.0
offset_bottom = 1591.0
theme_override_font_sizes/font_size = 40
text = "Proceed"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 38.0
offset_top = 1467.0
offset_right = 288.0
offset_bottom = 1591.0
theme_override_font_sizes/font_size = 40
text = "Back"

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 885.0
offset_right = 804.0
offset_bottom = 1407.0

[node name="OptionButton" type="OptionButton" parent="Panel"]
layout_mode = 0
offset_left = 46.0
offset_top = 396.0
offset_right = 729.0
offset_bottom = 498.0

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
layout_mode = 0
offset_left = 41.0
offset_top = 18.0
offset_right = 727.0
offset_bottom = 375.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Item1" type="LineEdit" parent="Panel/ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Placeholder"
alignment = 1
editable = false

[connection signal="drag_ended" from="VC/AgeMin/Slider" to="VC/AgeMin" method="_on_slider_drag_ended"]
[connection signal="value_changed" from="VC/AgeMin/SpinBox" to="VC/AgeMin" method="_on_spin_box_value_changed"]
[connection signal="drag_ended" from="VC/AgeMax/Slider" to="VC/AgeMax" method="_on_slider_drag_ended"]
[connection signal="value_changed" from="VC/AgeMax/SpinBox" to="VC/AgeMax" method="_on_spin_box_value_changed"]
[connection signal="drag_ended" from="VC/TimeSecs/Slider" to="VC/TimeSecs" method="_on_slider_drag_ended"]
[connection signal="value_changed" from="VC/TimeSecs/SpinBox" to="VC/TimeSecs" method="_on_spin_box_value_changed"]
[connection signal="button_down" from="ImageAdder" to="." method="_on_image_adder_button_down"]
[connection signal="file_selected" from="ImageAdder/FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="button_down" from="ProceedButton" to="." method="_on_proceed_button_down"]
[connection signal="button_down" from="BackButton" to="." method="_on_back_button_down"]
[connection signal="item_selected" from="Panel/OptionButton" to="." method="_on_option_button_item_selected"]
